--- a/less/input.less
+++ b/less/input.less
@@ -47,7 +47,7 @@ tui\:input,tui\:select,tui\:dialog-select,tui\:date-picker,tui\:file,tui\:textar
 	}
 	.tui-invalid-icon {
 		.icon-base();
-		&::before {
+		&:before {
 			
 			.fa-exclamation-triangle;
 		}
@@ -57,7 +57,7 @@ tui\:input,tui\:select,tui\:dialog-select,tui\:date-picker,tui\:file,tui\:textar
 		.icon-base();
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 20px;
-		&::before {
+		&:before {
 			/*.fa-times; */
 			content: "\00d7";
 		}
@@ -100,7 +100,7 @@ tui\:input {
 			-webkit-tap-highlight-color: transparent;
     		-webkit-user-modify:read-write-plaintext-only; 
 		}
-		&::-ms-clear {
+		&:-ms-clear {
 			display: none;
 		}
 	}
